Update positioning of overlay close button to prevent overflow and scrollbar display 🐿 v2.12.5

--- a/main.scss
+++ b/main.scss
@@ -139,8 +139,8 @@
 
 	.n-feedback__survey__close-button {
 		border-bottom: none;
-		margin-top: -10px;
-		margin-right: -10px;
+		margin-top: -8px;
+		margin-right: -8px;
 
 		span {
 			@include oNormaliseVisuallyHidden;
